--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+@import url('https://fonts.cdnfonts.com/css/miama');
+                
+
+.bonheur-royale-regular {
+    font-family: 'Miama', sans-serif;
+    font-weight: 400;
+    font-size: 135px;
+  }
+  
+
+
+
+
+
 /* *{
     margin: 0;
     padding: 0;
@@ -39,6 +54,7 @@
 .navbar{
     justify-content: space-around;
     align-items: center;
+
 }
 .brand{
     font-weight: 800;
@@ -83,16 +99,25 @@
 /* banner style */
 .banner{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .banner-title{
     color: white;
     font-size: 78px;
     font-weight: 900;
+    margin: 0px ;
+    line-height: 80px;
+}
+.top-line{
+    margin:0;
 }
 .banner-description{
     color: white;
     font-size: 16px;
     color: rgba(255, 255, 255, 0.5);
+    margin-top: 28px;
+    margin-bottom: 28px;
 }
 .download-btn{
     background:none ;
@@ -103,4 +128,63 @@
     font-weight: 600;
     font-size: 18px;
     color: white;
+    margin-left: 14px;
+}
+
+/* banner card style */
+.card{
+    position: absolute;
+    display:flex;
+    flex-direction: column;
+    width: 193px;
+    height: 98px;
+    left: 1250px;
+    top: 250px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+    justify-content: center;
+    align-items: center;
+}
+.card-top-title{
+    color: white;
+    font-size: 3.1rem;
+    font-weight: 900;
+    margin: 0;
+}
+.card-top-description{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: .8rem;
+    font-weight: 400;
+    margin: 0;
+}
+.card2{
+    position: absolute;
+    display:flex;
+    flex-direction: column;
+    width: 206px;
+    height: 96px;
+    left: 900px;
+    top: 556px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+    justify-content: center;
+    align-items: center;
+    
+}
+.card-title{
+    color: white;
+    font-size: 1.5rem;
+    margin: 0 auto;
+}
+.card-description{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0 auto;
 }
