--- a/style/style.css
+++ b/style/style.css
@@ -40,6 +40,29 @@
     color: white;
     border: none;
 }
+.shared-title{
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 600;
+    /* text-align: left; */
+    }    
+.shared-description{
+color: rgba(255, 255, 255, 0.5);
+font-size: 14px;
+font-weight: 400;
+text-align: center;
+}
+.share-position{
+    /* justify-content: center;
+    align-items: center; */
+    text-align: center;
+    
+}
+.circle-img{
+    box-sizing: border-box;
+    border: 3px solid rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+}
 
 
 
@@ -98,6 +121,7 @@
 
 /* banner style */
 .banner{
+    /* position: relative; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -163,7 +187,7 @@
 .card2{
     position: absolute;
     display:flex;
-    flex-direction: column;
+    gap: 12px;
     width: 206px;
     height: 96px;
     left: 900px;
@@ -177,6 +201,13 @@
     align-items: center;
     
 }
+.circle{
+    width: 40px;
+    height: 40px;
+    background: rgb(230, 83, 60);
+    border: none;
+    border-radius: 100px;
+}
 .card-title{
     color: white;
     font-size: 1.5rem;
@@ -187,4 +218,28 @@
     font-size: 1rem;
     font-weight: 400;
     margin: 0 auto;
+}
+
+
+
+
+/* main section style */
+.main-section{
+    margin-top: 100px;
+}
+.main-title{
+color: rgb(255, 255, 255);
+font-size: 3rem;
+font-weight: 900;
+text-align: center;
+margin: 0;
+}
+.main-description{
+    margin-bottom: 54px;
+}
+.img-section{
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    align-items: center;
 }
